Bullet Continuous Collision Detection and Physics Library
Erwin Coumans

2007 April 22
	- Added braking functionality to btRaycastVehicle
	- Removed tons of warnings, under MSVC 2005 compilation in -W4
	
2007 March 21
	- Fixed issues: comma at end of enum causes errors for some compilers
	- Fixed initialization bug in LocalRayResult (	m_localShapeInfo(localShapeInfo) )
	
2007 March 20
	- Added refit tree to quantized stackless tree, and updated ConcaveDemo as example.
	
2007 March 17
	- Added constraint solver optimizations, avoiding cross products during iterations, and gather rigidbody/constraint info in contiguous memory (btSolverBody/btSolverConstraint)
	- These optimizations don't give large benefit yet, but it has good potential. Turned on by default. Can be switched off using solver->setSolverMode(SOLVER_RANDMIZE_ORDER).
	- Enabled anti-jitter for rigid bodies. This is experimental, and can be switched off by setting a global (it is experimental so no proper interface) gJitterVelocityDampingFactor = 1.0;
	- Fixed bug in islandmanifold.heapSort(btPersistentManifoldSortPredicate()); , thanks Noehrgel for reporting this (affected Sun Solaris)
	
2007 March 12
	- Added compile-time toggle between on 16-bit and 32-bit fixed-point SAP broadphase. 
		This allows the number of bodies to exceed 32767
	- Enable useQuantizedAabbCompression on btTriangleMesh, see ColladaDemo
	
2007 March 8
	- Fixed bug in constraint/island sorting (caused by replacing STL by dedicated btAlignedObjectArray with heapSort)
		Thanks Clemens Unterkofler for pointing this out!

2007 March 6
	- removed STL from the Bullet library: replace std::vector by btAlignedObjectArray. Also removed the std::set for overlapping pair set, and turned it into an overlapping pair array. The SAP only adds objects, never removed. Removal is postponed for during traversal of overlapping pairs (duplicates and non-overlapping pairs are removed during that traversal).